@@ -20,6 +20,8 @@ version 0.8.6 - Not released, available at https://simupop.svn.sourceforge.net/s
   - BUG: Fix a information field + migration bug.
   - NEW: add operation resizeSubPops.
   - BUG: Fix a NuclearfamilySample bug regarding parameter minAffected.
+  - NEW: separate sex initialization from initByFreq, initByValue and pyInit
+		and add a new operator initSex.
 
 
 version 0.8.5 - (Rev 1488) Apr 3, 2008
